@@ -376,6 +376,7 @@ unpack-%-stamp: $(bin_pattern)
 clean:
 	dh_testdir
 	dh_testroot
+	rm -f *-stamp
 	rm -rf x64-jdk i586-jdk tmp-* $(unpackdir)
 	rm -f debian/*.debhelper debian/more debian/control.old
 	rm -f debian/$(p_jbin).substvars.tmp
@@ -401,7 +402,7 @@ binary-$(p_jbin):	DH_OPTIONS=-p$(p_jbin) $(NO_PACKAGES)
 binary-$(p_jbin):	build
 	dh_testdir
 	dh_testroot
-	dh_prep
+	dh_clean -d
 	dh_installdirs \
 		usr/share/doc \
 		etc/$(jdiralias)/security \
@@ -632,10 +633,10 @@ ia32-binary-bin: unpack-stamp
 
 
 binary-$(p_jre):	DH_OPTIONS=-p$(p_jre)
-binary-$(p_jre):	#binary-$(p_jbin)
+binary-$(p_jre):	build
 	dh_testdir
 	dh_testroot
-	dh_prep
+	dh_clean -d
 	dh_installdirs \
 		$(basedir)/jre \
 		usr/share/doc \
@@ -667,10 +668,10 @@ binary-$(p_jre):	#binary-$(p_jbin)
 
 
 binary-$(p_plug):	DH_OPTIONS=-p$(p_plug)
-binary-$(p_plug):	#binary-$(p_jbin)
+binary-$(p_plug):	build
 	dh_testdir
 	dh_testroot
-	dh_prep
+	dh_clean -d
 	dh_installdirs \
 		usr/share/doc \
 		$(lintian_overrides) \
@@ -680,7 +681,7 @@ binary-$(p_plug):	#binary-$(p_jbin)
 binary-$(p_fonts):	DH_OPTIONS=-p$(p_fonts)
 binary-$(p_fonts):	build
 	dh_testroot
-	dh_prep
+	dh_clean -d
 	dh_installdirs \
 		usr/share/doc \
 		usr/share/fonts/truetype/ttf-lucida
@@ -698,7 +699,7 @@ binary-$(p_jdk):	DH_OPTIONS=-p$(p_jdk)
 binary-$(p_jdk):	build
 	dh_testdir
 	dh_testroot
-	dh_prep
+	dh_clean -d
 	dh_installdirs \
 		usr/share/doc/$(p_jdk) \
 		$(basedir)/jre/lib/$(archdir) \
@@ -759,7 +760,7 @@ binary-$(p_demo):	DH_OPTIONS=-p$(p_demo)
 binary-$(p_demo):	build
 	dh_testdir
 	dh_testroot
-	dh_prep
+	dh_clean -d
 	dh_installdirs \
 		usr/share/doc/$(p_jdk) \
 		usr/share/pixmaps \
@@ -793,7 +794,7 @@ binary-$(p_src):	DH_OPTIONS=-p$(p_src)
 binary-$(p_src):	build
 	dh_testdir
 	dh_testroot
-	dh_prep
+	dh_clean -d
 	dh_installdirs \
 		usr/share/doc \
 		$(basedir)
@@ -807,7 +808,7 @@ binary-$(p_javadb):	DH_OPTIONS=-p$(p_javadb)
 binary-$(p_javadb):	build
 	dh_testdir
 	dh_testroot
-	dh_prep
+	dh_clean -d
 	dh_installdirs \
 		$(basedir) \
 		$(lintian_overrides) \
